Add a paragraph description under H1

--- a/recipes/fudge.html
+++ b/recipes/fudge.html
@@ -19,6 +19,10 @@
     
     
     <h1>Description</h1>
+    <p>Learn how to make a delicious rocky road fudge from home!
+        This fudge includes creamy milk chocolate, marshmallows and
+        almonds!
+    </p>
 
 
 
