Add steps heading and ordered list
Make the Steps heading 1, and add an ordered list of the steps to make the fudge recipe.

--- a/recipes/fudge.html
+++ b/recipes/fudge.html
@@ -34,7 +34,21 @@
             <li>1 cup of chopped almonds</li>
         </ul>
 
-
+        <h1>Steps</h1>
+        <ol>
+            <li>In a large mixing bowl, pour can of sweetened condensed milk
+                and 2 cups of chocolate chips
+            </li>
+            <li>Microwave mixing bowl with ingredients for 90 seconds
+                while taking bowl out halfway and mixing and continue microwaving
+            </li>
+            <li>Once done, add the 1 tsp of vanilla extract and mix</li>
+            <li>While waiting for mixing bowl to cool, start chopping up 1 cup of almonds</li>
+            <li>Finally, pour the 2 cups of marshmallows and almonds into mixing bowl
+                give it one final mix.
+            </li>
+            <li>In a 7x7 tray, pour in mixture. Store in fridge for 2 hours before cutting.</li>
+        </ol>
 
 
 
