Add link for brownies file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 
 <h1>Odin Recipes</h1>
-<a href ="recipes/fudge.html">Recipe</a>
+<a href ="recipes/fudge.html">Rocky-Road-Fudge Recipe</a>
+<a href ="recipes/brownies.html">Brownie Recipe</a>
+
 
 </body>
 
