Add mozzarella-sticks recipe link to file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <h1>Odin Recipes</h1>
 <a href ="recipes/fudge.html">Rocky-Road-Fudge Recipe</a>
 <a href ="recipes/brownies.html">Brownie Recipe</a>
+<a href ="recipes/mozzarella-sticks.html">Mozzarella Sticks Recipe</a>
 
 
 </body>
