Changed file name
Changed mozzarella sticks image name from jpeg to jpg, updated img command

--- a/recipes/mozzarella-sticks.html
+++ b/recipes/mozzarella-sticks.html
@@ -11,9 +11,19 @@
 
 <body>
 <h1>Mozzarella Sticks Recipe</h1>
-<img src="mozzarella-sticks.html">
+<img src="mozzarella-sticks.jpg">
 
 
+<h2>Description</h2>
+<p>Learn how to make delicious mozzarella sticks! With this recipe
+    you can pair with many delicious sides like marinaea sauce!
+    This recipe would go perfect for dinner or an appetizer.
+</p>
+
+<h2>Ingredients</h2>
+<ul>
+    <li></li>
+</ul>
 
 
 </body>
